RESOLVED FIXED54393
Regression: Back, Forward, Reload hidden in context menu
https://bugs.webkit.org/show_bug.cgi?id=54393
Summary Regression: Back, Forward, Reload hidden in context menu
Christian Dywan
Reported 2011-02-14 08:09:30 PST
The Back, Forward, Reload and Stop menu items in the default context menu are hidden unless they are sensitive. This is a regression, it used to work like it should in previous releases.
Attachments
Always show Back, Forward, Reload and Stop context menu items for the GTK+ port (2.23 KB, patch)
2011-02-14 08:12 PST, Christian Dywan
gustavo: review+
Christian Dywan
Comment 1 2011-02-14 08:12:21 PST
Created attachment 82317 [details] Always show Back, Forward, Reload and Stop context menu items for the GTK+ port The patch includes a comment to prevent this from regressing again.
Gustavo Noronha (kov)
Comment 2 2011-02-14 08:25:17 PST
Comment on attachment 82317 [details] Always show Back, Forward, Reload and Stop context menu items for the GTK+ port Yep, that's how it works =)
Christian Dywan
Comment 3 2011-02-14 08:32:49 PST
Committed as r78480.
Note You need to log in before you can comment on or make changes to this bug.