Regression: Back, Forward, Reload hidden in context menu https://bugs.webkit.org/show_bug.cgi?id=54393

Reviewed by Gustavo Noronha Silva.

* page/ContextMenuController.cpp: Always show Back, Forward,
    Reload and Stop context menu items for the GTK+ port.

Canonical link: https://commits.webkit.org/68481@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78480 268f45cc-cd09-0410-ab3c-d52691b4dbfc